# invention-skills

./: README.md  pyproject.toml
.claude/: settings.local.json
.sddw/triz/: requirements.md
.sddw/triz/design/tasks/: task-1-reference-data.md  task-2-contradiction-matrix.md  task-3-installer-lib.md  task-4-claude-installer.md  task-5-gemini-installer.md  task-6-skill-bodies.md  task-7-tests.md  task-8-readme-contract.md
.sddw/triz/implement/tasks/: task-1-reference-data.done.md  task-2-contradiction-matrix.done.md  task-3-installer-lib.done.md  task-4-claude-installer.done.md  task-5-gemini-installer.done.md  task-6-skill-bodies.done.md  task-7-tests.done.md  task-8-readme-contract.done.md
.sddw/triz/verify/: report.md
doc/: TRIZ for Software Engineering.md
install/: __init__.py  install_claude_code.py  install_gemini_cli.py
install/lib/: __init__.py  idempotency.py  source.py
install/lib/targets/: __init__.py  claude_code.py  gemini_cli.py
reference/: gof-mappings.md  matrix-sources.md  matrix.json  parameters.md  principles.md
skills/: triz-contradiction.md  triz-design-audit.md  triz-refactor.md  triz-reference.md  triz-sprint.md
skills/triz-contradiction/: SKILL.md
skills/triz-design-audit/: SKILL.md
skills/triz-refactor/: SKILL.md
skills/triz-reference/: SKILL.md
skills/triz-sprint/: SKILL.md
tests/: conftest.py  test_claude_code_transformer.py  test_idempotency.py  test_install_claude.py  test_install_gemini.py  test_reference_data.py  test_source_loader.py
