[project]
name = "triz-skills-installer"
version = "0.1.0"
description = "Installer library for TRIZ skills suite"
requires-python = ">=3.10"
# No runtime dependencies — stdlib only (Design Decision: no PyYAML, no Pydantic).
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
